--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="social-links">
       <a href="https://t.me/leavingsol" class="button">Telegram</a>
       <a href="https://x.com/leavingsol" class="button">X</a>
-      <a href="https://example.com" class="button">Pumpfun</a>
+      <a href="https://pump.fun/board" class="button">Pumpfun</a>
     </div>
     
   </div>
